--- a/foundations/intro-to-css/01-css-methods/styles.css
+++ b/foundations/intro-to-css/01-css-methods/styles.css
@@ -1,5 +1,6 @@
 div {
-    background-color: blue;
+    background-color: red;
+    color: white;
     font-size: 32;
     text-align: center;
     font-weight: bold;
