--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,15 +1,15 @@
 .odd {
     background-color: rgb(195, 112, 146);
-    font: Verdana, "DejaVu Sans", sans-serif;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
+}
+
+.adjust-font-size {
+    font-size: 24px;
 }
 
 #two {
     color: rgb(22, 22, 218);
     font-size: 36px;
-}
-
-.odd.three {
-    font-size: 24px;
 }
 
 #four {
